...
    
    // MARK: - Visual Components
    private lazy var webView: WKWebView = {
        let webView = WKWebView()
        webView.backgroundColor = .white
        webView.translatesAutoresizingMaskIntoConstraints = false
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        return webView
    }()
    
    private lazy var backButton: UIButton = {
        let button = UIButton()
...
